--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,36 @@
+---
+import Noise from "@/components/Noise.astro";
+
+interface Props {
+  title: string;
+}
+const { title } = Astro.props;
+---
+
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es-mx">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Evento de boxeo entre streamers y creadores de contenido organizado por Ibai Llanos"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="canonical" href="https://lavelada.es" />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Noise />
+    <div class="max-w-6xl px-2 lg:px-10 pt-32 mx-auto">
+      <slot />
+    </div>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html {
+    font-family: "Jost Variable", system-ui, sans-serif;
+    background: #ddd;
+  }
 </style>
