--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,23 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import "@/styles/global.css";
+import Layout from "@/layouts/Layout.astro";
+
+import Countdown from "@/sections/Countdown.astro";
+import Footer from "@/sections/Footer.astro";
+import Hero from "@/sections/Hero.astro";
+import Info from "@/sections/Info.astro";
+import PrincipalDate from "@/sections/PrincipalDate.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="la velada 4 - Evento de boxeo de ibai Llanos">
+  <Hero />
+  <main>
+    <PrincipalDate />
+    <Info />
+    <Countdown />
+  </main>
+  <Footer />
 </Layout>
